--- a/tox.ini
+++ b/tox.ini
@@ -6,9 +6,9 @@ deps =
     six
     numpy
     pandas
+    pytest
 changedir = {envtmpdir}
 commands =
     python --version
     python -m drms --version
-    python -c 'import drms; print(drms)'
-    python -c 'import drms; c = drms.Client(); assert c.query("hmi.v_avg120[2150]", pkeys=True).CarrRot[0] == 2150'
+    python -m drms.tests
