--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,7 +1,7 @@
 build:
   image: latest
 
-requirements_file: docs/rtd_requirements.txt
+requirements_file: doc/rtd_requirements.txt
 
 python:
   version: 3.6
