--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,24 @@
 [tox]
-envlist = py27, py34, py35, py36
+envlist = py27, py35, py36, py37
 
 [testenv]
 deps =
     six
     numpy
     pandas
+    pytest
+changedir = {envtmpdir}
+commands =
+    python --version
+    python -m drms --version
+    python -m drms.tests
+
+[testenv:py34]
+deps =
+    Cython
+    six==1.8.0
+    numpy==1.9.0
+    pandas==0.15.0
     pytest
 changedir = {envtmpdir}
 commands =
