Renamed JOSS plot script, updated code, added more comments

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ __pycache__
 /*.egg-info/
 /examples/jsoc.stanford.edu/
 /examples/downloads/
+/examples/joss_figure.pdf
 /nogit/
 /.tox/
 /doc/build/
