removed setuptools_scm test dep

--- a/setup.cfg
+++ b/setup.cfg
@@ -40,8 +40,6 @@ install_requires=
 [options.extras_require]
 tests =
   pytest-astropy
-  # If you plan to run the tests locally this has to be installed.
-  setuptools_scm
   tox
 docs =
   astropy
@@ -61,7 +59,7 @@ console_scripts =
 
 [tool:pytest]
 testpaths = "drms" "docs"
-norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info" "examples" ".history" "paper"
+norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info" "examples" ".history" "paper" "drms[\/]_dev"
 doctest_plus = enabled
 doctest_optionflags = NORMALIZE_WHITESPACE FLOAT_CMP ELLIPSIS
 addopts = --doctest-rst
