used sunpy to build the changelog

--- a/setup.cfg
+++ b/setup.cfg
@@ -47,6 +47,7 @@ docs =
   sphinx
   sphinx-automodapi
   sphinx-gallery
+  sunpy # We need the changelog directive.
   sunpy-sphinx-theme
   towncrier
 
