updated CI and py39 tests

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    py{37,38}{,-online,-sunpy}
+    py{37,38,39}{,-online,-sunpy}
     build_docs
     codestyle
 isolated_build = true
@@ -41,14 +41,16 @@ deps =
     online: pytest-timeout
     # We want to run the sunpy jsoc tests
     sunpy: sunpy[all]
+    # All our tests run in parallel which this plugin allows us to.
+    pytest-xdist
 # The following indicates which extras_require from setup.cfg will be installed
 # dev is special in that it installs everything
 extras =
     dev
 commands =
-    sunpy: pytest -vvv -s -ra --pyargs sunpy.net.jsoc --remote-data=any -m "remote_data" {posargs}
+    sunpy: pytest -vvv -s -ra --pyargs sunpy.net.jsoc --remote-data=any {posargs}
     !online: {env:PYTEST_COMMAND} {posargs}
-    online: {env:PYTEST_COMMAND} --reruns 2 --timeout=180 --remote-data=any -m "remote_data" --email nabil.freij@gmail.com {posargs}
+    online: {env:PYTEST_COMMAND} --reruns 2 --timeout=180 --remote-data=any --email nabil.freij@gmail.com {posargs}
 
 [testenv:build_docs]
 changedir = docs
