--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,52 +30,87 @@ trigger:
     - '*pre*'
     - '*post*'
 
-jobs:
-- template: run-tox-env.yml@OpenAstronomy
-  parameters:
-    default_python: '3.8'
-    submodules: false
-    coverage: codecov
-    toxdeps: tox-pypi-filter
-    libraries:
-      apt:
-        - graphviz
+pr:
+  autoCancel: true
 
-    envs:
-      - macos: py38
-        name: py38_test
+stages:
+  - stage: FirstPhaseTests
+    displayName: Core Tests
+    jobs:
+    - template: run-tox-env.yml@OpenAstronomy
+      parameters:
+        default_python: '3.8'
+        submodules: false
+        coverage: codecov
+        toxdeps: tox-pypi-filter
+        posargs: -n=4
 
-      - windows: py37
-        name: py37_test
+        envs:
+          - linux: codestyle
+            name: style_check
+            pytest: false
+            libraries: {}
 
-      - linux: py38-online
-        name: py38_test_online
+          - linux: py38
 
-      - linux: py38-sunpy
-        name: py38_test_sunpy_online
+  - stage: SecondPhaseTests
+    displayName: Stage 2 Tests
+    dependsOn: FirstPhaseTests
+    jobs:
+    - template: run-tox-env.yml@OpenAstronomy
+      parameters:
+        default_python: '3.8'
+        submodules: false
+        coverage: codecov
+        toxdeps: tox-pypi-filter
+        posargs: -n=4
 
-      - linux: codestyle
-        name: python_codestyle
-        pytest: false
+        libraries:
+          apt:
+            - graphviz
 
-      - linux: build_docs
-        posargs: " "
-        pytest: false
+        envs:
+          - macos: py37
 
-# On branches which aren't master, and not Pull Requests, build the wheels but only upload them on tags
-- ${{ if and(ne(variables['Build.Reason'], 'PullRequest'), not(contains(variables['Build.SourceBranch'], 'master'))) }}:
-  - template: publish.yml@OpenAstronomy
-    parameters:
-      # Only Upload to PyPI on tags
-      ${{ if startsWith(variables['Build.SourceBranch'], 'refs/tags/') }}:
-        pypi_connection_name : 'PyPI'
-      test_extras: 'dev'
-      test_command: 'pytest -p no:warnings --doctest-rst --pyargs drms'
-      submodules: false
-      targets:
-        - wheels_universal
-        - sdist
-      dependsOn:
-        - py37_test
-        - py38_test
-        - py38_test_online
+          - windows: py39
+
+          - linux: build_docs
+            posargs: " "
+            pytest: false
+
+          - linux: py38-online
+
+          - linux: py38-sunpy
+
+  - ${{ if or(eq(variables['Build.Reason'], 'Schedule'), eq(variables['Build.Reason'], 'Manual')) }}:
+    - stage: CronTests
+      displayName: Cron Tests
+      dependsOn: []  # Don't wait on other stages
+      jobs:
+      - template: run-tox-env.yml@OpenAstronomy
+        parameters:
+          default_python: '3.8'
+          submodules: false
+          coverage: codecov
+          toxdeps: tox-pypi-filter
+          posargs: -n=4
+
+          envs:
+            - linux: py38-devdeps
+
+  # On branches which aren't master, and not Pull Requests, build the wheels but only upload them on tags
+  - ${{ if and(ne(variables['Build.Reason'], 'PullRequest'), or(ne(variables['Build.SourceBranchName'], 'master'), eq(variables['Build.Reason'], 'Schedule'), eq(variables['Build.Reason'], 'Manual'))) }}:
+    - stage: Release
+      dependsOn: SecondPhaseTests
+      jobs:
+      - template: publish.yml@OpenAstronomy
+        parameters:
+          # Only Upload to PyPI on tags
+          ${{ if startsWith(variables['Build.SourceBranch'], 'refs/tags/') }}:
+            pypi_connection_name : 'PyPI'
+          test_extras: 'dev'
+          test_command: 'pytest -p no:warnings --doctest-rst --pyargs drms'
+          submodules: false
+          targets:
+            - wheels_universal
+            - sdist
