--- a/tox.ini
+++ b/tox.ini
@@ -29,7 +29,7 @@ setenv =
     MPLBACKEND = agg
     COLUMNS = 180
     PYTEST_COMMAND = pytest -vvv -s -ra --pyargs drms --cov-report=xml --cov=drms --cov-config={toxinidir}/setup.cfg {toxinidir}/docs
-    devdeps,build_docs,online: HOME = {envtmpdir}
+    build_docs,online: HOME = {envtmpdir}
 passenv =
     HTTP_PROXY
     HTTPS_PROXY
@@ -50,7 +50,7 @@ extras =
 commands =
     sunpy: pytest -vvv -s -ra --pyargs sunpy.net.jsoc --remote-data=any {posargs}
     !online: {env:PYTEST_COMMAND} {posargs}
-    online: {env:PYTEST_COMMAND} --reruns 2 --reruns-delay 30 --timeout=180 --remote-data=any --email jsoc@cadair.com {posargs}
+    online: {env:PYTEST_COMMAND} --reruns 2 --reruns-delay 60 --timeout=300 --remote-data=any --email jsoc@cadair.com {posargs}
 
 [testenv:build_docs]
 changedir = docs
