--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,8 +1,8 @@
 name: $(BuildDefinitionName)_$(Date:yyyyMMdd)$(Rev:.rr)
 
 schedules:
-  - cron: "0 0 * * *"
-    displayName: Daily midnight build
+  - cron: "0 0 * * 0"
+    displayName: At 00:00 on Sunday
     branches:
       include:
       - master
@@ -43,7 +43,7 @@ stages:
         submodules: false
         coverage: codecov
         toxdeps: tox-pypi-filter
-        posargs: -n=4
+        posargs: -n=1
 
         envs:
           - linux: codestyle
@@ -63,7 +63,7 @@ stages:
         submodules: false
         coverage: codecov
         toxdeps: tox-pypi-filter
-        posargs: -n=4
+        posargs: -n=1
 
         libraries:
           apt:
@@ -80,23 +80,20 @@ stages:
 
           - linux: py38-online
 
+  - stage: ThirdPhaseTests
+    displayName: Stage 3 Tests
+    dependsOn: SecondPhaseTests
+    jobs:
+    - template: run-tox-env.yml@OpenAstronomy
+      parameters:
+        default_python: '3.8'
+        submodules: false
+        coverage: codecov
+        toxdeps: tox-pypi-filter
+        posargs: -n=1
+
+        envs:
           - linux: py38-sunpy
-
-  - ${{ if or(eq(variables['Build.Reason'], 'Schedule'), eq(variables['Build.Reason'], 'Manual')) }}:
-    - stage: CronTests
-      displayName: Cron Tests
-      dependsOn: []  # Don't wait on other stages
-      jobs:
-      - template: run-tox-env.yml@OpenAstronomy
-        parameters:
-          default_python: '3.8'
-          submodules: false
-          coverage: codecov
-          toxdeps: tox-pypi-filter
-          posargs: -n=4
-
-          envs:
-            - linux: py38-devdeps
 
   # On branches which aren't master, and not Pull Requests, build the wheels but only upload them on tags
   - ${{ if and(ne(variables['Build.Reason'], 'PullRequest'), or(ne(variables['Build.SourceBranchName'], 'master'), eq(variables['Build.Reason'], 'Schedule'), eq(variables['Build.Reason'], 'Manual'))) }}:
