--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = drms
 provides = drms
-description = "Access HMI, AIA and MDI data with Python"
+description = "Access HMI, AIA and MDI data with Python from the public JSOC DRMS server"
 long_description = file: README.rst
 long_description_content_type = text/x-rst
 author = The SunPy Community
@@ -23,6 +23,7 @@ classifiers =
   Programming Language :: Python :: 3
   Programming Language :: Python :: 3.7
   Programming Language :: Python :: 3.8
+  Programming Language :: Python :: 3.9
   Topic :: Scientific/Engineering :: Astronomy
   Topic :: Scientific/Engineering :: Physics
 
@@ -47,9 +48,8 @@ docs =
   sphinx
   sphinx-automodapi
   sphinx-gallery
-  sunpy # We need the changelog directive.
+  sphinx-changelog
   sunpy-sphinx-theme
-  towncrier
 
 [options.packages.find]
 exclude = drms._dev
