--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ requires =
     tox-pypi-filter >= 0.12
 
 [testenv]
-pypi_filter = https://raw.githubusercontent.com/sunpy/sunpy/master/.test_package_pins.txt
+pypi_filter = https://raw.githubusercontent.com/sunpy/sunpy/main/.test_package_pins.txt
 # Run the tests in a temporary directory to make sure that we don't import
 # drms from the source tree
 changedir = .tmp/{envname}
@@ -25,6 +25,7 @@ changedir = .tmp/{envname}
 description =
     run tests
     online: that require remote data
+    sunpy: run the sunpy jsoc tests to ensure we dont break them
 setenv =
     MPLBACKEND = agg
     COLUMNS = 180
@@ -39,10 +40,14 @@ deps =
     # These are specific online extras we use to run the online tests.
     online: pytest-rerunfailures
     online: pytest-timeout
-    # We want to run the sunpy jsoc tests
-    sunpy: sunpy[all]
-    # All our tests run in parallel which this plugin allows us to.
-    pytest-xdist
+    sunpy: git+https://github.com/sunpy/sunpy
+    # These are specific extras we use to run the sunpy tests.
+    sunpy: beautifulsoup4
+    sunpy: pytest-mock
+    sunpy: python-dateutil
+    sunpy: scipy
+    sunpy: tqdm
+    sunpy: zeep
 # The following indicates which extras_require from setup.cfg will be installed
 # dev is special in that it installs everything
 extras =
