--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,11 @@
 [tox]
 envlist =
-    py{37,38,39}{,-online,-sunpy}
+    py{38,39,310}{,-online,-sunpy}
     build_docs
     codestyle
 isolated_build = true
 requires =
-    setuptools >= 30.3.0
+    setuptools >=56, !=61.0.0
     pip >= 19.3.1
     tox-pypi-filter >= 0.12
 
@@ -14,14 +14,6 @@ pypi_filter = https://raw.githubusercontent.com/sunpy/sunpy/main/.test_package_p
 # Run the tests in a temporary directory to make sure that we don't import
 # drms from the source tree
 changedir = .tmp/{envname}
-# tox environments are constructed with so-called 'factors' (or terms)
-# separated by hyphens, e.g. test-devdeps-cov. Lines below starting with factor:
-# will only take effect if that factor is included in the environment name. To
-# see a list of example environments that can be run, along with a description,
-# run:
-#
-#     tox -l -v
-#
 description =
     run tests
     online: that require remote data
