--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = drms
 provides = drms
-description = "Access HMI, AIA and MDI data with Python from the public JSOC DRMS server"
+description = Access HMI, AIA and MDI data with Python from the public JSOC DRMS server
 long_description = file: README.rst
 long_description_content_type = text/x-rst
 author = The SunPy Community
@@ -21,15 +21,15 @@ classifiers =
   Operating System :: OS Independent
   Programming Language :: Python
   Programming Language :: Python :: 3
-  Programming Language :: Python :: 3.7
   Programming Language :: Python :: 3.8
   Programming Language :: Python :: 3.9
+  Programming Language :: Python :: 3.10
   Topic :: Scientific/Engineering :: Astronomy
   Topic :: Scientific/Engineering :: Physics
 
 [options]
 zip_safe = False
-python_requires = >=3.7
+python_requires = >=3.8
 packages = find:
 include_package_data = True
 setup_requires =
