--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,17 +1,20 @@
-# readthedocs.yml
-# Read the Docs configuration file
-# See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
-
 version: 2
+build:
+  os: ubuntu-20.04
+  tools:
+    python: "3.9"
+  apt_packages:
+    - graphviz
 
 sphinx:
   builder: html
   configuration: docs/conf.py
-  fail_on_warning: true
+  fail_on_warning: false
 
 python:
    install:
-      - method: pip
-        extra_requirements:
-           - dev
-        path: .
+     - method: pip
+       extra_requirements:
+        - all
+        - docs
+       path: .
