use sunpy email address

--- a/tox.ini
+++ b/tox.ini
@@ -47,7 +47,7 @@ extras =
 commands =
     sunpy: pytest -vvv -s -ra --pyargs sunpy.net.jsoc --remote-data=any {posargs}
     !online: {env:PYTEST_COMMAND} {posargs}
-    online: {env:PYTEST_COMMAND} --reruns 2 --reruns-delay 60 --timeout=300 --remote-data=any --email nabil.freij@gmail.com {posargs}
+    online: {env:PYTEST_COMMAND} --reruns 2 --reruns-delay 60 --timeout=300 --remote-data=any --email jsoc@sunpy.org {posargs}
 
 [testenv:build_docs]
 changedir = docs
