--- a/setup.cfg
+++ b/setup.cfg
@@ -36,7 +36,8 @@ setup_requires =
   setuptools_scm
 install_requires=
   numpy
-  pandas
+  # Exclude 1.5.0 due to https://github.com/pandas-dev/pandas/issues/48701
+  pandas!=1.5.0
 
 [options.extras_require]
 tests =
