TMP: install dev pandas

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,8 +36,7 @@ setup_requires =
   setuptools_scm
 install_requires=
   numpy
-  # Exclude 1.5.0 due to https://github.com/pandas-dev/pandas/issues/48701
-  pandas!=1.5.0
+  pandas @ git+https://github.com/pandas-dev/pandas@main
 
 [options.extras_require]
 tests =
