--- a/setup.cfg
+++ b/setup.cfg
@@ -71,6 +71,8 @@ markers =
     export: marks the test function as needing a JSOC registered email address.
 remote_data_strict = True
 junit_family=xunit2
+filterwarnings =
+    error
 
 [pycodestyle]
 max_line_length = 110
