Update URL open to raise a nicer message and workaround for pandas

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,8 +36,7 @@ setup_requires =
   setuptools_scm
 install_requires=
   numpy
-  # Exclude 1.5.0 due to https://github.com/pandas-dev/pandas/issues/48701
-  pandas!=1.5.0
+  pandas
 
 [options.extras_require]
 tests =
@@ -64,7 +63,7 @@ testpaths = "drms" "docs"
 norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info" "examples" ".history" "paper" "drms[\/]_dev"
 doctest_plus = enabled
 doctest_optionflags = NORMALIZE_WHITESPACE FLOAT_CMP ELLIPSIS
-addopts = --doctest-rst
+addopts = --doctest-rst --doctest-ignore-import-errors -p no:unraisableexception -p no:threadexception
 markers =
     remote_data: marks this test function as needing remote data.
     jsoc: marks the test function as needing a connection to JSOC.
@@ -72,6 +71,10 @@ markers =
     export: marks the test function as needing a JSOC registered email address.
 remote_data_strict = True
 junit_family=xunit2
+filterwarnings =
+    error
+    # Do not fail on pytest config issues (i.e. missing plugins) but do show them
+    always::pytest.PytestConfigWarning
 
 [pycodestyle]
 max_line_length = 110
