skip more warnings

--- a/setup.cfg
+++ b/setup.cfg
@@ -75,6 +75,11 @@ filterwarnings =
     error
     # Do not fail on pytest config issues (i.e. missing plugins) but do show them
     always::pytest.PytestConfigWarning
+    # This is due to dependencies building with a numpy version different from
+    # the local installed numpy version, but should be fine
+    # See https://github.com/numpy/numpy/issues/15748#issuecomment-598584838
+    ignore:numpy.ufunc size changed:RuntimeWarning
+    ignore:numpy.ndarray size changed:RuntimeWarning
 
 [pycodestyle]
 max_line_length = 110
