glance over the docs

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = drms
 provides = drms
-description = Access HMI, AIA and MDI data with Python from the public JSOC DRMS server
+description = Access HMI, AIA and MDI data with Python from the Standford JSOC DRMS
 long_description = file: README.rst
 long_description_content_type = text/x-rst
 author = The SunPy Community
@@ -63,7 +63,7 @@ testpaths = "drms" "docs"
 norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info" "examples" ".history" "paper" "drms[\/]_dev"
 doctest_plus = enabled
 doctest_optionflags = NORMALIZE_WHITESPACE FLOAT_CMP ELLIPSIS
-addopts = --doctest-rst --doctest-ignore-import-errors -p no:unraisableexception -p no:threadexception
+addopts = --doctest-rst -p no:unraisableexception -p no:threadexception
 markers =
     remote_data: marks this test function as needing remote data.
     jsoc: marks the test function as needing a connection to JSOC.
