--- a/tox.ini
+++ b/tox.ini
@@ -23,31 +23,28 @@ setenv =
     COLUMNS = 180
     PYTEST_COMMAND = pytest -vvv -s -ra --pyargs drms --cov-report=xml --cov=drms --cov-config={toxinidir}/setup.cfg {toxinidir}/docs
     build_docs,online: HOME = {envtmpdir}
+    JSOC_EMAIL = jsoc@sunpy.org
 passenv =
     HTTP_PROXY
     HTTPS_PROXY
     NO_PROXY
     CIRCLECI
 deps =
-    # These are specific online extras we use to run the online tests.
-    online: pytest-rerunfailures
-    online: pytest-timeout
-    sunpy: git+https://github.com/sunpy/sunpy
+    pytest-timeout
     # These are specific extras we use to run the sunpy tests.
+    sunpy: git+https://github.com/sunpy/sunpy
     sunpy: beautifulsoup4
     sunpy: pytest-mock
     sunpy: python-dateutil
     sunpy: scipy
     sunpy: tqdm
     sunpy: zeep
-# The following indicates which extras_require from setup.cfg will be installed
-# dev is special in that it installs everything
 extras =
     dev
 commands =
-    sunpy: pytest -vvv -s -ra --pyargs sunpy.net.jsoc --remote-data=any {posargs}
+    sunpy: pytest -vvv -s -ra --pyargs sunpy.net.jsoc --timeout=120 --remote-data=any {posargs}
     !online: {env:PYTEST_COMMAND} {posargs}
-    online: {env:PYTEST_COMMAND} --reruns 2 --reruns-delay 60 --timeout=300 --remote-data=any --email jsoc@sunpy.org {posargs}
+    online: {env:PYTEST_COMMAND} --timeout=120 --remote-data=any --email jsoc@sunpy.org {posargs}
 
 [testenv:build_docs]
 changedir = docs
