--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ long_description_content_type = text/x-rst
 author = The SunPy Community
 author_email = sunpy@googlegroups.com
 license = BSD 2-Clause
-license_file = LICENSE.rst
+license_files = LICENSE.rst
 url = https://sunpy.org
 edit_on_github = True
 github_project = sunpy/drms
