Update URL open to raise a nicer message and workaround for pandas 1.5.0 (#76)

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,13 +1,13 @@
 [metadata]
 name = drms
 provides = drms
-description = Access HMI, AIA and MDI data with Python from the public JSOC DRMS server
+description = Access HMI, AIA and MDI data with Python from the Standford JSOC DRMS
 long_description = file: README.rst
 long_description_content_type = text/x-rst
 author = The SunPy Community
 author_email = sunpy@googlegroups.com
 license = BSD 2-Clause
-license_file = LICENSE.rst
+license_files = LICENSE.rst
 url = https://sunpy.org
 edit_on_github = True
 github_project = sunpy/drms
@@ -36,8 +36,7 @@ setup_requires =
   setuptools_scm
 install_requires=
   numpy
-  # Exclude 1.5.0 due to https://github.com/pandas-dev/pandas/issues/48701
-  pandas!=1.5.0
+  pandas
 
 [options.extras_require]
 tests =
@@ -64,7 +63,7 @@ testpaths = "drms" "docs"
 norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info" "examples" ".history" "paper" "drms[\/]_dev"
 doctest_plus = enabled
 doctest_optionflags = NORMALIZE_WHITESPACE FLOAT_CMP ELLIPSIS
-addopts = --doctest-rst
+addopts = --doctest-rst -p no:unraisableexception -p no:threadexception
 markers =
     remote_data: marks this test function as needing remote data.
     jsoc: marks the test function as needing a connection to JSOC.
@@ -72,6 +71,15 @@ markers =
     export: marks the test function as needing a JSOC registered email address.
 remote_data_strict = True
 junit_family=xunit2
+filterwarnings =
+    error
+    # Do not fail on pytest config issues (i.e. missing plugins) but do show them
+    always::pytest.PytestConfigWarning
+    # This is due to dependencies building with a numpy version different from
+    # the local installed numpy version, but should be fine
+    # See https://github.com/numpy/numpy/issues/15748#issuecomment-598584838
+    ignore:numpy.ufunc size changed:RuntimeWarning
+    ignore:numpy.ndarray size changed:RuntimeWarning
 
 [pycodestyle]
 max_line_length = 110
