--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,7 @@ classifiers =
   Programming Language :: Python :: 3.8
   Programming Language :: Python :: 3.9
   Programming Language :: Python :: 3.10
+  Programming Language :: Python :: 3.11
   Topic :: Scientific/Engineering :: Astronomy
   Topic :: Scientific/Engineering :: Physics
 
@@ -69,6 +70,8 @@ markers =
     jsoc: marks the test function as needing a connection to JSOC.
     kis: marks the test function as needing a connection to KIS.
     export: marks the test function as needing a JSOC registered email address.
+    xdist_group: sunpy thing
+    flaky: sunpy thing
 remote_data_strict = True
 junit_family=xunit2
 filterwarnings =
