--- a/tox.ini
+++ b/tox.ini
@@ -30,6 +30,7 @@ passenv =
     NO_PROXY
     CIRCLECI
 deps =
+    pytest-xdist
     pytest-timeout
     # These are specific extras we use to run the sunpy tests.
     sunpy: git+https://github.com/sunpy/sunpy
