--- a/setup.cfg
+++ b/setup.cfg
@@ -51,6 +51,8 @@ docs =
   sphinx-gallery
   sphinx-changelog
   sunpy-sphinx-theme
+  # Not a direct dependency, but we need to pin this until sphinx-changelog is updated (see #6668)
+  towncrier<22.12.0
 
 [options.packages.find]
 exclude = drms._dev
