--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,7 +65,7 @@ jobs:
       submodules: false
       coverage: codecov
       toxdeps: "'tox<4' tox-pypi-filter"
-      posargs: -n auto --dist loadgroup
+      posargs: -n 1 --dist loadgroup
       envs: |
         - linux: py311-online
 
