--- a/setup.cfg
+++ b/setup.cfg
@@ -51,6 +51,8 @@ docs =
   sphinx-gallery
   sphinx-changelog
   sunpy-sphinx-theme
+  # Not a direct dependency, but we need to pin this until sphinx-changelog is updated (see #6668)
+  towncrier<22.12.0
 
 [options.packages.find]
 exclude = drms._dev
@@ -83,6 +85,8 @@ filterwarnings =
     # See https://github.com/numpy/numpy/issues/15748#issuecomment-598584838
     ignore:numpy.ufunc size changed:RuntimeWarning
     ignore:numpy.ndarray size changed:RuntimeWarning
+    # https://github.com/pytest-dev/pytest-cov/issues/557
+    ignore:The --rsyncdir command line argument and rsyncdirs config variable are deprecated.:DeprecationWarning
 
 [pycodestyle]
 max_line_length = 110
