--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ build-backend = 'setuptools.build_meta'
 
 [tool.black]
 line-length = 120
-include = '\.pyi?$'
+target-version = ['py39']
 exclude = '''
 (
   /(
@@ -19,7 +19,6 @@ exclude = '''
     | \.tox
     | \.venv
     | _build
-    | buck-out
     | build
     | dist
     | docs
@@ -27,6 +26,101 @@ exclude = '''
   )/
 )
 '''
+
+[tool.ruff]
+fix = true
+exclude = [
+    ".eggs",
+    ".git",
+    ".mypy_cache",
+    ".ruff_cache",
+    ".tox",
+    ".venv",
+    "__pypackages__",
+    "_build",
+    "build",
+    "dist",
+    "node_modules",
+    "venv",
+    "joss",
+    "paper",
+]
+
+# Same as Black.
+line-length = 120
+target-version = "py39"
+
+# Allow unused variables when underscore-prefixed.
+dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
+ignore = ["E501"]
+select = [
+       "E",
+       "F",
+       "W",
+       "UP",
+       "PT",
+       "RET",
+       "TID",
+       "PLE",
+       "NPY",
+       "RUF",
+       "PGH",
+       "PTH",
+       "BLE",
+       "FBT",
+       "B",
+       "A",
+       "COM",
+       "C4",
+       "T20",
+       "RSE",
+       "ERA",
+]
+fixable = [
+       "E",
+       "F",
+       "W",
+       "UP",
+       "PT",
+       "RET",
+       "TID",
+       "PLE",
+       "NPY",
+       "RUF",
+       "PGH",
+       "PTH",
+       "BLE",
+       "FBT",
+       "B",
+       "A",
+       "COM",
+       "C4",
+       "T20",
+       "RSE",
+       "ERA",
+]
+extend-ignore = [
+    # pytest (PT)
+    "PT001",  # Always use pytest.fixture()
+    "PT004",  # Fixtures which don't return anything should have leading _
+    "PT023",  # Always use () on pytest decorators
+    # General
+    "PGH004", # NOQA IS THE BEST OF ALL TIME
+    "FBT003", # Boolean positional value in function call
+    "FBT002", # Boolean default value in function definition
+]
+
+[tool.ruff.per-file-ignores]
+"examples/*.py" = [
+    "T201", # We need print in our examples
+]
+"setup.py" = ["INP001"] # Part of configuration, not a package.
+"conftest.py" = ["INP001"] # Part of configuration, not a package.
+"docs/*.py" = [
+    "INP001", # implicit-namespace-package. The examples are not a package.
+    "F405", # `html_theme_options` may be undefined, or defined from star imports: `sunpy_sphinx_theme.conf`
+    "A001", # Variable `copyright` is shadowing a python builtin
+]
 
 [ tool.gilesbot ]
   [ tool.gilesbot.pull_requests ]
