Pass over the high level files

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = drms
 provides = drms
-description = Access HMI, AIA and MDI data with Python from the Standford JSOC DRMS
+description = Access HMI, AIA and MDI data from the Standford JSOC DRMS
 long_description = file: README.rst
 long_description_content_type = text/x-rst
 author = The SunPy Community
