--- a/tox.ini
+++ b/tox.ini
@@ -1,18 +1,17 @@
 [tox]
+min_version = 4.0
 envlist =
     py{39,310,311}{,-online,-sunpy}
     build_docs
     codestyle
-isolated_build = true
 requires =
-    setuptools >=56, !=61.0.0
-    pip >= 19.3.1
-    tox-pypi-filter >= 0.12
+    setuptools
+    pip
+    tox-pypi-filter
 
 [testenv]
 pypi_filter = https://raw.githubusercontent.com/sunpy/sunpy/main/.test_package_pins.txt
-# Run the tests in a temporary directory to make sure that we don't import
-# drms from the source tree
+# Run the tests in a temporary directory to make sure that we don't import drms from the source tree
 changedir = .tmp/{envname}
 description =
     run tests
