--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [build-system]
 requires = [
-  "setuptools>=56,!=61.0.0",
-  "setuptools_scm[toml]>=6.2",
+  "setuptools",
+  "setuptools_scm[toml]",
   "wheel",
   "oldest-supported-numpy",
 ]
