--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 min_version = 4.0
 envlist =
-    py{39,310,311}{,-online,-sunpy}
+    py{39,310,311}{,-online,-sunpy,-oldestdeps}
     build_docs
     codestyle
 requires =
@@ -39,6 +39,9 @@ deps =
     sunpy: scipy
     sunpy: tqdm
     sunpy: zeep
+    # These are the oldest deps we support
+    oldestdeps: numpy<1.21
+    oldestdeps: pandas<1.4
 extras =
     dev
 commands =
