--- a/setup.cfg
+++ b/setup.cfg
@@ -29,14 +29,14 @@ classifiers =
 
 [options]
 zip_safe = False
-python_requires = >=3.8
+python_requires = >=3.9
 packages = find:
 include_package_data = True
 setup_requires =
   setuptools_scm
 install_requires=
-  numpy
-  pandas
+  numpy>=1.20
+  pandas>=1.3
 
 [options.extras_require]
 tests =
@@ -50,8 +50,6 @@ docs =
   sphinx-gallery
   sphinx-changelog
   sunpy-sphinx-theme
-  # Not a direct dependency, but we need to pin this until sphinx-changelog is updated (see #6668)
-  towncrier<22.12.0
 
 [options.packages.find]
 exclude = drms._dev
