--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ target-version = ['py39']
 exclude = '''
 (
   /(
-      \.eggs
+    \.eggs
     | \.git
     | \.mypy_cache
     | \.tox
@@ -27,32 +27,43 @@ exclude = '''
 )
 '''
 
+[tool.isort]
+profile = "black"
+line_length = 120
+length_sort = "False"
+length_sort_sections = "stdlib"
+
 [tool.ruff]
-fix = true
-exclude = [
-    ".eggs",
-    ".git",
-    ".mypy_cache",
-    ".ruff_cache",
-    ".tox",
-    ".venv",
+# Allow unused variables when underscore-prefixed.
+dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
+target-version = "py39"
+line-length = 120
+exclude=[
+    "__pycache__",
     "__pypackages__",
     "_build",
+    ".bzr",
+    ".direnv",
+    ".eggs",
+    ".git-rewrite",
+    ".git",
+    ".hg",
+    ".mypy_cache",
+    ".nox",
+    ".pants.d",
+    ".pytype",
+    ".ruff_cache",
+    ".svn",
+    ".tox",
+    ".venv",
+    "buck-out",
     "build",
     "dist",
     "node_modules",
+    "paper/create_joss_figure.py",
+    "tools/**",
     "venv",
-    "joss",
-    "paper",
 ]
-
-# Same as Black.
-line-length = 120
-target-version = "py39"
-
-# Allow unused variables when underscore-prefixed.
-dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
-ignore = ["E501"]
 select = [
        "E",
        "F",
@@ -76,55 +87,28 @@ select = [
        "RSE",
        "ERA",
 ]
-fixable = [
-       "E",
-       "F",
-       "W",
-       "UP",
-       "PT",
-       "RET",
-       "TID",
-       "PLE",
-       "NPY",
-       "RUF",
-       "PGH",
-       "PTH",
-       "BLE",
-       "FBT",
-       "B",
-       "A",
-       "COM",
-       "C4",
-       "T20",
-       "RSE",
-       "ERA",
-]
 extend-ignore = [
-    # pytest (PT)
-    "PT001",  # Always use pytest.fixture()
-    "PT004",  # Fixtures which don't return anything should have leading _
-    "PT023",  # Always use () on pytest decorators
-    # General
-    "PGH004", # NOQA IS THE BEST OF ALL TIME
-    "FBT003", # Boolean positional value in function call
-    "FBT002", # Boolean default value in function definition
+    "E501",  # Line too long
 ]
 
 [tool.ruff.per-file-ignores]
 "examples/*.py" = [
-    "T201", # We need print in our examples
+  "T201",
+  # We need print in our examples
 ]
-"setup.py" = ["INP001"] # Part of configuration, not a package.
-"conftest.py" = ["INP001"] # Part of configuration, not a package.
-"docs/*.py" = [
-    "INP001", # implicit-namespace-package. The examples are not a package.
-    "F405", # `html_theme_options` may be undefined, or defined from star imports: `sunpy_sphinx_theme.conf`
-    "A001", # Variable `copyright` is shadowing a python builtin
+"examples/plot_hmi_modes.py" = [
+  "E741", # Ambiguous variable name
 ]
-"drms/client.py" = ["A003"] # Class attribute `id` and `dir` is shadowing a python builtin
-"drms/json.py" = ["A003"] # Class attribute `all` is shadowing a python builtin
-"examples/plot_hmi_modes.py" = ["E741"] # Ambiguous variable name: `l`
 
+[tool.ruff.pydocstyle]
+convention = "numpy"
+
+[tool.ruff.flake8-quotes]
+docstring-quotes = "double"
+
+[tool.codespell]
+skip = "*.asdf,*.fits,*.fts,*.header,*.json,*.xsh,*cache*,*egg*,*extern*,.git,.idea,.tox,_build,*truncated,*.svg,.asv_env,.history"
+ignore-words-list = "sav,"
 
 [ tool.gilesbot ]
   [ tool.gilesbot.pull_requests ]
