add oldest deps

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,7 @@ jobs:
       envs: |
         - windows: py39
         - macos: py38
+        - linux: py39-oldestdeps
 
   docs:
     needs: [core]
