--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    py{38,39,310,311}{,-online,-sunpy}
+    py{38,39,310,311}{,-online,-sunpy,-oldestdeps}
     build_docs
     codestyle
 isolated_build = true
@@ -32,6 +32,8 @@ passenv =
 deps =
     pytest-xdist
     pytest-timeout
+    # Oldest deps we pin against
+    oldestdeps: pandas<2.0
     # These are specific extras we use to run the sunpy tests.
     sunpy: git+https://github.com/sunpy/sunpy
     sunpy: beautifulsoup4
