--- a/setup.cfg
+++ b/setup.cfg
@@ -66,7 +66,7 @@ testpaths = "drms" "docs"
 norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info" "examples" ".history" "paper" "drms[\/]_dev"
 doctest_plus = enabled
 doctest_optionflags = NORMALIZE_WHITESPACE FLOAT_CMP ELLIPSIS
-addopts = --doctest-rst -p no:unraisableexception -p no:threadexception
+addopts = --strict-markers --doctest-rst -p no:unraisableexception -p no:threadexception
 markers =
     remote_data: marks this test function as needing remote data.
     jsoc: marks the test function as needing a connection to JSOC.
