Update doc deps

--- a/setup.cfg
+++ b/setup.cfg
@@ -47,8 +47,11 @@ docs =
   matplotlib
   sphinx
   sphinx-automodapi
-  sphinx-gallery
   sphinx-changelog
+  sphinx-copybutton
+  sphinx-gallery
+  sphinx-hoverxref
+  sphinxext-opengraph
   sunpy-sphinx-theme
 
 [options.packages.find]
