--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,8 +75,7 @@ jobs:
     # publish_pure_python.yml will only publish if tagged ^v.*
     if: |
       (
-        github.event_name != 'pull_request' &&
-          github.event_name == 'workflow_dispatch'
+        github.event_name != 'pull_request'
       ) || (
         github.event_name == 'pull_request' &&
         contains(github.event.pull_request.labels.*.name, 'Run publish')
