--- a/setup.cfg
+++ b/setup.cfg
@@ -31,7 +31,9 @@ classifiers =
 [options]
 zip_safe = False
 python_requires = >=3.8
-packages = find:
+package_dir=
+    =src
+packages=find:
 include_package_data = True
 setup_requires =
   setuptools_scm
