--- a/setup.cfg
+++ b/setup.cfg
@@ -66,16 +66,12 @@ testpaths = "drms" "docs"
 norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info" "examples" ".history" "paper" "drms[\/]_dev"
 doctest_plus = enabled
 doctest_optionflags = NORMALIZE_WHITESPACE FLOAT_CMP ELLIPSIS
-addopts = --strict-markers --doctest-rst -p no:unraisableexception -p no:threadexception
+addopts = --doctest-rst -p no:unraisableexception -p no:threadexception
 markers =
     remote_data: marks this test function as needing remote data.
     jsoc: marks the test function as needing a connection to JSOC.
     kis: marks the test function as needing a connection to KIS.
-    export: marks the test function as needing a JSOC registered email address.
-    xdist_group: sunpy thing
-    flaky: sunpy thing
 remote_data_strict = True
-junit_family=xunit2
 filterwarnings =
     error
     # Do not fail on pytest config issues (i.e. missing plugins) but do show them
@@ -85,8 +81,6 @@ filterwarnings =
     # See https://github.com/numpy/numpy/issues/15748#issuecomment-598584838
     ignore:numpy.ufunc size changed:RuntimeWarning
     ignore:numpy.ndarray size changed:RuntimeWarning
-    # https://github.com/pytest-dev/pytest-cov/issues/557
-    ignore:The --rsyncdir command line argument and rsyncdirs config variable are deprecated.:DeprecationWarning
 
 [pycodestyle]
 max_line_length = 110
