--- a/setup.cfg
+++ b/setup.cfg
@@ -81,6 +81,8 @@ filterwarnings =
     # See https://github.com/numpy/numpy/issues/15748#issuecomment-598584838
     ignore:numpy.ufunc size changed:RuntimeWarning
     ignore:numpy.ndarray size changed:RuntimeWarning
+    # https://github.com/pytest-dev/pytest-cov/issues/557
+    ignore:The --rsyncdir command line argument and rsyncdirs config variable are deprecated.:DeprecationWarning
 
 [pycodestyle]
 max_line_length = 110
