--- a/tox.ini
+++ b/tox.ini
@@ -54,7 +54,7 @@ description = Invoke sphinx-build to build the HTML docs
 extras = dev
 commands =
     sphinx-build -j auto --color -W --keep-going -b html -d _build/.doctrees . _build/html {posargs}
-    python -c 'import pathlib; print("Documentation available under file://\{0\}".format(pathlib.Path(r"{toxinidir}") / "docs" / "_build" / "index.html"))'
+    python -c 'import pathlib; print("Documentation available under file://\{0\}".format(pathlib.Path(r"{toxinidir}") / "docs" / "_build" / "html"/ "index.html"))'
 
 [testenv:codestyle]
 pypi_filter =
