Fix doc build and bug

--- a/setup.cfg
+++ b/setup.cfg
@@ -54,6 +54,8 @@ docs =
   sphinx-hoverxref
   sphinxext-opengraph
   sunpy-sphinx-theme
+  # Remove next line when fixed in towncrier; see https://github.com/twisted/towncrier/issues/528
+  importlib-resources<6
 
 [options.packages.find]
 exclude = drms._dev
