Remove the pytest email option, just env instead

--- a/setup.cfg
+++ b/setup.cfg
@@ -74,6 +74,7 @@ markers =
     remote_data: marks this test function as needing remote data.
     jsoc: marks the test function as needing a connection to JSOC.
     kis: marks the test function as needing a connection to KIS.
+    flaky: from sunpy
 remote_data_strict = True
 filterwarnings =
     error
@@ -86,3 +87,4 @@ filterwarnings =
     ignore:numpy.ndarray size changed:RuntimeWarning
     # https://github.com/pytest-dev/pytest-cov/issues/557
     ignore:The --rsyncdir command line argument and rsyncdirs config variable are deprecated.:DeprecationWarning
+    ignore:.*is deprecated and slated for removal in Python 3:DeprecationWarning
