--- a/tox.ini
+++ b/tox.ini
@@ -46,7 +46,7 @@ extras =
 commands =
     sunpy: pytest -vvv -s -ra --pyargs sunpy.net.jsoc --timeout=120 --remote-data=any {posargs}
     !online: {env:PYTEST_COMMAND} {posargs}
-    online: {env:PYTEST_COMMAND} --timeout=120 --remote-data=any --email jsoc@sunpy.org {posargs}
+    online: {env:PYTEST_COMMAND} --timeout=120 --remote-data=any {posargs}
 
 [testenv:build_docs]
 changedir = docs
