--- a/tox.ini
+++ b/tox.ini
@@ -1,16 +1,18 @@
 [tox]
+min_version = 4.0
 envlist =
-    py{38,39,310,311}{,-online,-sunpy,-oldestdeps}
+    py{39,310,311}{,-online,-sunpy,-oldestdeps}
     build_docs
     codestyle
-isolated_build = true
 requires =
-    setuptools >=56, !=61.0.0
-    pip >= 19.3.1
-    tox-pypi-filter >= 0.12
+    setuptools
+    pip
+    tox-pypi-filter
 
 [testenv]
 pypi_filter = https://raw.githubusercontent.com/sunpy/sunpy/main/.test_package_pins.txt
+# Run the tests in a temporary directory to make sure that we don't import drms from the source tree
+changedir = .tmp/{envname}
 description =
     run tests
     online: that require remote data
@@ -44,7 +46,7 @@ extras =
 commands =
     sunpy: pytest -vvv -s -ra --pyargs sunpy.net.jsoc --timeout=120 --remote-data=any {posargs}
     !online: {env:PYTEST_COMMAND} {posargs}
-    online: {env:PYTEST_COMMAND} --timeout=120 --remote-data=any --email jsoc@sunpy.org {posargs}
+    online: {env:PYTEST_COMMAND} --timeout=120 --remote-data=any {posargs}
 
 [testenv:build_docs]
 changedir = docs
@@ -52,7 +54,7 @@ description = Invoke sphinx-build to build the HTML docs
 extras = dev
 commands =
     sphinx-build -j auto --color -W --keep-going -b html -d _build/.doctrees . _build/html {posargs}
-    python -c 'import pathlib; print("Documentation available under file://\{0\}".format(pathlib.Path(r"{toxinidir}") / "docs" / "_build" / "index.html"))'
+    python -c 'import pathlib; print("Documentation available under file://\{0\}".format(pathlib.Path(r"{toxinidir}") / "docs" / "_build" / "html"/ "index.html"))'
 
 [testenv:codestyle]
 pypi_filter =
