--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [build-system]
 requires = [
-  "setuptools>=56,!=61.0.0",
-  "setuptools_scm[toml]>=6.2",
+  "setuptools",
+  "setuptools_scm[toml]",
   "wheel",
   "oldest-supported-numpy",
 ]
@@ -9,17 +9,16 @@ build-backend = 'setuptools.build_meta'
 
 [tool.black]
 line-length = 120
-include = '\.pyi?$'
+target-version = ['py39']
 exclude = '''
 (
   /(
-      \.eggs
+    \.eggs
     | \.git
     | \.mypy_cache
     | \.tox
     | \.venv
     | _build
-    | buck-out
     | build
     | dist
     | docs
@@ -27,6 +26,89 @@ exclude = '''
   )/
 )
 '''
+
+[tool.isort]
+profile = "black"
+line_length = 120
+length_sort = "False"
+length_sort_sections = "stdlib"
+
+[tool.ruff]
+# Allow unused variables when underscore-prefixed.
+dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
+target-version = "py39"
+line-length = 120
+exclude=[
+    "__pycache__",
+    "__pypackages__",
+    "_build",
+    ".bzr",
+    ".direnv",
+    ".eggs",
+    ".git-rewrite",
+    ".git",
+    ".hg",
+    ".mypy_cache",
+    ".nox",
+    ".pants.d",
+    ".pytype",
+    ".ruff_cache",
+    ".svn",
+    ".tox",
+    ".venv",
+    "buck-out",
+    "build",
+    "dist",
+    "node_modules",
+    "paper/create_joss_figure.py",
+    "tools/**",
+    "venv",
+]
+select = [
+       "E",
+       "F",
+       "W",
+       "UP",
+       "PT",
+       "RET",
+       "TID",
+       "PLE",
+       "NPY",
+       "RUF",
+       "PGH",
+       "PTH",
+       "BLE",
+       "FBT",
+       "B",
+       "A",
+       "COM",
+       "C4",
+       "T20",
+       "RSE",
+       "ERA",
+]
+extend-ignore = [
+    "E501",  # Line too long
+]
+
+[tool.ruff.per-file-ignores]
+"examples/*.py" = [
+  "T201",
+  # We need print in our examples
+]
+"examples/plot_hmi_modes.py" = [
+  "E741", # Ambiguous variable name
+]
+
+[tool.ruff.pydocstyle]
+convention = "numpy"
+
+[tool.ruff.flake8-quotes]
+docstring-quotes = "double"
+
+[tool.codespell]
+skip = "*.asdf,*.fits,*.fts,*.header,*.json,*.xsh,*cache*,*egg*,*extern*,.git,.idea,.tox,_build,*truncated,*.svg,.asv_env,.history"
+ignore-words-list = "sav,requestor"
 
 [ tool.gilesbot ]
   [ tool.gilesbot.pull_requests ]
