--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = drms
 provides = drms
-description = Access HMI, AIA and MDI data with Python from the Standford JSOC DRMS
+description = Access HMI, AIA and MDI data from the Standford JSOC DRMS
 long_description = file: README.rst
 long_description_content_type = text/x-rst
 author = The SunPy Community
@@ -21,7 +21,6 @@ classifiers =
   Operating System :: OS Independent
   Programming Language :: Python
   Programming Language :: Python :: 3
-  Programming Language :: Python :: 3.8
   Programming Language :: Python :: 3.9
   Programming Language :: Python :: 3.10
   Programming Language :: Python :: 3.11
@@ -30,8 +29,8 @@ classifiers =
 
 [options]
 zip_safe = False
-python_requires = >=3.8
-packages=find:
+python_requires = >=3.9
+packages = find:
 include_package_data = True
 setup_requires =
   setuptools_scm
@@ -49,11 +48,14 @@ docs =
   matplotlib
   sphinx
   sphinx-automodapi
-  sphinx-gallery
   sphinx-changelog
+  sphinx-copybutton
+  sphinx-gallery
+  sphinx-hoverxref
+  sphinxext-opengraph
   sunpy-sphinx-theme
-  # Not a direct dependency, but we need to pin this until sphinx-changelog is updated (see #6668)
-  towncrier<22.12.0
+  # Remove next line when fixed in towncrier; see https://github.com/twisted/towncrier/issues/528
+  importlib-resources<6
 
 [options.packages.find]
 exclude = drms._dev
@@ -72,6 +74,7 @@ markers =
     remote_data: marks this test function as needing remote data.
     jsoc: marks the test function as needing a connection to JSOC.
     kis: marks the test function as needing a connection to KIS.
+    flaky: from sunpy
 remote_data_strict = True
 filterwarnings =
     error
@@ -84,67 +87,4 @@ filterwarnings =
     ignore:numpy.ndarray size changed:RuntimeWarning
     # https://github.com/pytest-dev/pytest-cov/issues/557
     ignore:The --rsyncdir command line argument and rsyncdirs config variable are deprecated.:DeprecationWarning
-
-[pycodestyle]
-max_line_length = 110
-
-[flake8]
-max-line-length = 110
-exclude =
-    .git,
-    __pycache__,
-    docs/conf.py,
-    build,
-rst-directives =
-    plot
-
-[isort]
-balanced_wrapping = True
-skip=docs/conf.py
-default_section = THIRDPARTY
-include_trailing_comma = True
-known_astropy = astropy, asdf, sunpy
-known_first_party = drms
-length_sort = False
-length_sort_sections=stdlib
-line_length = 110
-multi_line_output = 3
-no_lines_before = LOCALFOLDER
-sections = STDLIB, THIRDPARTY, ASTROPY, FIRSTPARTY, LOCALFOLDER
-
-[coverage:run]
-omit =
-  */drms/__init__*
-  */drms/_dev/*
-  */drms/*/tests/*
-  */drms/*setup*
-  */drms/conftest.py
-  */drms/cython_version*
-  */drms/data/_sample.py
-  */drms/data/sample.py
-  */drms/extern/*
-  */drms/version*
-  drms/__init__*
-  drms/_dev/*
-  drms/*/tests/*
-  drms/*setup*
-  drms/conftest.py
-  drms/cython_version*
-  drms/data/_sample.py
-  drms/data/sample.py
-  drms/extern/*
-  drms/version*
-
-[coverage:report]
-exclude_lines =
-  # Have to re-enable the standard pragma
-  pragma: no cover
-  # Don't complain about packages we have installed
-  except ImportError
-  # Don't complain if tests don't hit assertions
-  raise AssertionError
-  raise NotImplementedError
-  # Don't complain about script hooks
-  def main\(.*\):
-  # Ignore branches that don't pertain to this version of Python
-  pragma: py{ignore_python_version}
+    ignore:.*is deprecated and slated for removal in Python 3:DeprecationWarning
