--- a/tox.ini
+++ b/tox.ini
@@ -5,8 +5,6 @@ envlist =
     build_docs
     codestyle
 requires =
-    setuptools
-    pip
     tox-pypi-filter
 
 [testenv]
@@ -44,6 +42,7 @@ deps =
 extras =
     dev
 commands =
+    pip freeze --all --no-input
     sunpy: pytest -vvv -s -ra --pyargs sunpy.net.jsoc --timeout=120 --remote-data=any {posargs}
     !online: {env:PYTEST_COMMAND} {posargs}
     online: {env:PYTEST_COMMAND} --timeout=120 --remote-data=any {posargs}
@@ -53,7 +52,8 @@ changedir = docs
 description = Invoke sphinx-build to build the HTML docs
 extras = dev
 commands =
-    sphinx-build -j auto --color -W --keep-going -b html -d _build/.doctrees . _build/html {posargs}
+    pip freeze --all --no-input
+    sphinx-build -j 1 --color -W --keep-going -b html -d _build/.doctrees . _build/html {posargs}
     python -c 'import pathlib; print("Documentation available under file://\{0\}".format(pathlib.Path(r"{toxinidir}") / "docs" / "_build" / "html"/ "index.html"))'
 
 [testenv:codestyle]
