Incorrectly setup logger

--- a/setup.cfg
+++ b/setup.cfg
@@ -67,6 +67,7 @@ console_scripts =
 [tool:pytest]
 testpaths = "drms" "docs"
 norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info" "examples" ".history" "paper" "drms[\/]_dev"
+log_cli = True
 doctest_plus = enabled
 doctest_optionflags = NORMALIZE_WHITESPACE FLOAT_CMP ELLIPSIS
 addopts = --doctest-rst -p no:unraisableexception -p no:threadexception
