--- a/setup.cfg
+++ b/setup.cfg
@@ -67,7 +67,8 @@ console_scripts =
 [tool:pytest]
 testpaths = "drms" "docs"
 norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info" "examples" ".history" "paper" "drms[\/]_dev"
-log_cli = True
+log_cli=true
+log_level=INFO
 doctest_plus = enabled
 doctest_optionflags = NORMALIZE_WHITESPACE FLOAT_CMP ELLIPSIS
 addopts = --doctest-rst -p no:unraisableexception -p no:threadexception
