--- a/tox.ini
+++ b/tox.ini
@@ -30,10 +30,13 @@ deps =
     pytest-xdist
     pytest-timeout
     # Oldest deps we pin against
+    oldestdeps: numpy<2.0
     oldestdeps: pandas<2.0
     # These are specific extras we use to run the sunpy tests.
     sunpy: git+https://github.com/sunpy/sunpy
     sunpy: beautifulsoup4
+    sunpy: mpl-animators
+    sunpy: reproject
     sunpy: pytest-mock
     sunpy: python-dateutil
     sunpy: scipy
