Make the ENUM return a value (#116)
* Make the ENUM return a value

* Update for 310 min

* changelog

* left over tests

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 min_version = 4.0
 envlist =
-    py{39,310,311}{,-online,-sunpy,-oldestdeps}
+    py{310,311,312}{,-online,-sunpy,-oldestdeps}
     build_docs
     codestyle
 requires =
@@ -30,10 +30,13 @@ deps =
     pytest-xdist
     pytest-timeout
     # Oldest deps we pin against
+    oldestdeps: numpy<2.0
     oldestdeps: pandas<2.0
     # These are specific extras we use to run the sunpy tests.
     sunpy: git+https://github.com/sunpy/sunpy
     sunpy: beautifulsoup4
+    sunpy: mpl-animators
+    sunpy: reproject
     sunpy: pytest-mock
     sunpy: python-dateutil
     sunpy: scipy
