--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ build-backend = 'setuptools.build_meta'
 
 [tool.black]
 line-length = 120
-target-version = ['py39']
+target-version = ['py310']
 exclude = '''
 (
   /(
@@ -34,9 +34,7 @@ length_sort = "False"
 length_sort_sections = "stdlib"
 
 [tool.ruff]
-# Allow unused variables when underscore-prefixed.
-dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
-target-version = "py39"
+target-version = "py310"
 line-length = 120
 exclude=[
     "__pycache__",
@@ -64,6 +62,10 @@ exclude=[
     "tools/**",
     "venv",
 ]
+
+[tool.ruff.lint]
+# Allow unused variables when underscore-prefixed.
+dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 select = [
        "E",
        "F",
@@ -91,7 +93,7 @@ extend-ignore = [
     "E501",  # Line too long
 ]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "examples/*.py" = [
   "T201",
   # We need print in our examples
@@ -100,10 +102,10 @@ extend-ignore = [
   "E741", # Ambiguous variable name
 ]
 
-[tool.ruff.pydocstyle]
+[tool.ruff.lint.pydocstyle]
 convention = "numpy"
 
-[tool.ruff.flake8-quotes]
+[tool.ruff.lint.flake8-quotes]
 docstring-quotes = "double"
 
 [tool.codespell]
